--- a/templates/simple.html
+++ b/templates/simple.html
@@ -10,25 +10,23 @@
     <hr>
     {% if files_info.filename_origin %}
     <h2>Исходное изображение</h2>
-    <p>Путь к файлу: {{files_info.filename_origin}}</p>
     <p>Размер изображения: {{files_info.origin_size}}</p>
-    <p><img src={{files_info.filename_origin}} style="max-width: 100%;" /></p>
+    <p><img src="data:image/jpeg;base64, {{files_info.filename_origin}}" style="max-width: 100%;" /></p>
 
     {% if files_info.origin_platname %}
     <h3>Графики распределения цветов исходного изображения</h3>
-    <p><img src={{files_info.origin_platname}} /></p>
+    <p><img src="data:image/jpeg;base64, {{files_info.origin_platname}}" /></p>
     {% endif %}
 
     {% if files_info.filename_modifi %}
     <h2>Измененное изображение</h2>
-    <p>Путь к файлу: {{files_info.filename_modifi}}
     <p>Размер изображения: {{files_info.modifi_size}}</p>
-    <p><img src={{files_info.filename_modifi}} style="max-width: 100%;" /></p>
+    <p><img src="data:image/jpeg;base64, {{files_info.filename_modifi}}" style="max-width: 100%;" /></p>
     {% endif %}
 
     {% if files_info.modify_plotname %}
     <h3>Графики распределения цветов измененного изображения</h3>
-    <p><img src={{files_info.modify_plotname}} /></p>
+    <p><img src="data:image/jpeg;base64, {{files_info.modify_plotname}}" /></p>
     {% endif %}
 
     {% endif %}
